update README to show how to set jvm args through maven