@@ -46,6 +46,7 @@ The resulting Neo4j instance will have [this schema](https://github.com/ldbc/ldb
 
 **Run Example Using Maven**
 
+	MAVEN_OPTS="-server -XX:+UseConcMarkSweepGC -Xmx512m" 
 	mvn exec:java -Dexec.mainClass=com.ldbc.driver.Client 
 	-Dexec.arguments="-db,com.ldbc.socialnet.workload.neo4j.Neo4jDb,-w,com.ldbc.socialnet.workload.LdbcInteractiveWorkload,
 	-oc,10,-rc,-1,-tc,1,-s,-tu,MILLISECONDS,-p,neo4j.path=db/,-p,neo4j.dbtype=embedded"
