@@ -17,7 +17,7 @@ import com.ldbc.socialnet.workload.neo4j.utils.Config;
 
 /* 
 
-mvn exec:java -Dexec.mainClass=com.ldbc.driver.Client -Dexec.arguments="-oc,10,-rc,-1,-tc,1,-s,-tu,MILLISECONDS,-p,neo4j.path=db/,-p,neo4j.dbtype=embedded,-db,com.ldbc.socialnet.workload.neo4j.Neo4jDb,-w,com.ldbc.socialnet.workload.LdbcInteractiveWorkload"
+MAVEN_OPTS="-server -XX:+UseConcMarkSweepGC -Xmx256m" mvn exec:java -Dexec.mainClass=com.ldbc.driver.Client -Dexec.arguments="-oc,10,-rc,-1,-tc,1,-s,-tu,MILLISECONDS,-p,neo4j.path=db/,-p,neo4j.dbtype=embedded,-db,com.ldbc.socialnet.workload.neo4j.Neo4jDb,-w,com.ldbc.socialnet.workload.LdbcInteractiveWorkload"
 sudo java -agentlib:hprof=cpu=samples,interval=10,depth=5 -server -XX:+UseConcMarkSweepGC -Xmx16G -cp ldbc_driver/core/target/core-0.1-SNAPSHOT.jar:target/neo4j_importer-0.1-SNAPSHOT.jar com.ldbc.driver.Client -oc 10 -rc -1 -tc 1 -s -tu MILLISECONDS -p neo4j.path=/var/neodata/ldbc/neo4j_socialnet_50000_users_10_years_FIX_2_INDEX/neo4jdb/ neo4j.dbtype=embedded -db com.ldbc.socialnet.workload.neo4j.Neo4jDb -w com.ldbc.socialnet.workload.LdbcInteractiveWorkload
 sudo mvn -DjvmArgs="-server -XX:+UseConcMarkSweepGC -Xmx16G" exec:java -Dexec.mainClass=com.ldbc.driver.Client -Dexec.arguments="-db,com.ldbc.socialnet.workload.neo4j.Neo4jDb,-w,com.ldbc.socialnet.workload.LdbcInteractiveWorkload,-oc,500,-rc,-1,-tc,1,-s,-tu,MILLISECONDS,-p,neo4j.path=/var/neodata/ldbc/neo4j_socialnet_50000_users_10_years_FIX_2_INDEX/neo4jdb/,-p,neo4j.dbtype=embedded"
  */
